#379 FEAT : migrate to JDK 17 and JakartaEE - commons spring